# rust-bech32

./: Cargo.toml
embedded/no-allocator/src/: main.rs
embedded/with-allocator/src/: main.rs
fuzz/fuzz_targets/: encode_decode.rs  parse_hrp.rs
src/: lib.rs  segwit.rs
src/primitives/: decode.rs  encode.rs  iter.rs
tests/: bip_173_test_vectors.rs  bip_350_test_vectors.rs
